--- a/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
@@ -7,63 +7,63 @@
             <key>tombstone0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,176},{60,56}}</string>
+                <string>{{2,403},{42,49}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{1,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{60,56}}</string>
+                <string>{{8,0},{42,49}}</string>
                 <key>sourceSize</key>
-                <string>{60,56}</string>
+                <string>{56,49}</string>
             </dict>
             <key>tombstone1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,118},{60,56}}</string>
+                <string>{{2,301},{44,49}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{60,56}}</string>
+                <string>{{6,0},{44,49}}</string>
                 <key>sourceSize</key>
-                <string>{60,56}</string>
+                <string>{56,49}</string>
             </dict>
             <key>tombstone_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,60},{60,56}}</string>
+                <string>{{2,352},{42,49}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{1,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{60,56}}</string>
+                <string>{{8,0},{42,49}}</string>
                 <key>sourceSize</key>
-                <string>{60,56}</string>
+                <string>{56,49}</string>
             </dict>
             <key>tombstone_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{60,56}}</string>
+                <string>{{2,250},{44,49}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{60,56}}</string>
+                <string>{{6,0},{44,49}}</string>
                 <key>sourceSize</key>
-                <string>{60,56}</string>
+                <string>{56,49}</string>
             </dict>
             <key>zombie0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,280},{44,59}}</string>
+                <string>{{2,189},{44,59}}</string>
                 <key>offset</key>
                 <string>{1,-2}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{3,4},{44,59}}</string>
                 <key>sourceSize</key>
@@ -72,7 +72,7 @@
             <key>zombie1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,389},{46,61}}</string>
+                <string>{{2,65},{46,61}}</string>
                 <key>offset</key>
                 <string>{1,-1}</string>
                 <key>rotated</key>
@@ -85,11 +85,11 @@
             <key>zombie_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,234},{44,59}}</string>
+                <string>{{2,128},{44,59}}</string>
                 <key>offset</key>
                 <string>{1,-2}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{3,4},{44,59}}</string>
                 <key>sourceSize</key>
@@ -98,7 +98,7 @@
             <key>zombie_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,326},{46,61}}</string>
+                <string>{{2,2},{46,61}}</string>
                 <key>offset</key>
                 <string>{1,-1}</string>
                 <key>rotated</key>
@@ -116,9 +116,9 @@
             <key>realTextureFileName</key>
             <string>zombieframes-hd.pvr.ccz</string>
             <key>size</key>
-            <string>{64,452}</string>
+            <string>{50,454}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:c654929769541e99e68e4e0dff5d63b7:e4556ee1bc694a36515145b51e5a8576:5c81cfe899bcfbd9929e71e079678d1f$</string>
+            <string>$TexturePacker:SmartUpdate:8108ef5bace81d5162d1848723cc263b:d2abe05439282638f8571e66b1c7d50c:5c81cfe899bcfbd9929e71e079678d1f$</string>
             <key>textureFileName</key>
             <string>zombieframes-hd.pvr.ccz</string>
         </dict>
