--- a/blockwar/Projectfiles-iOS/Resources/Info.plist
+++ b/blockwar/Projectfiles-iOS/Resources/Info.plist
@@ -53,5 +53,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Krungthep.ttf</string>
+    </array>
 </dict>
 </plist>
