--- a/blockwar/Projectfiles/Worlds/World1/Levels/Russia_Level5.plist
+++ b/blockwar/Projectfiles/Worlds/World1/Levels/Russia_Level5.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>levelNum</key>
+	<string>5</string>
 	<key>enemyHP</key>
-	<string>45</string>
+	<string>100</string>
 	<key>bossExists</key>
 	<true/>
 	<key>Boss</key>
