--- a/blockwar/Projectfiles/Resources/Sprites/russianframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/russianframes-hd.plist
@@ -7,7 +7,7 @@
             <key>boss_russian0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,180},{176,196}}</string>
+                <string>{{2,560},{176,196}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>boss_russian1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,530},{170,192}}</string>
+                <string>{{2,910},{170,192}}</string>
                 <key>offset</key>
                 <string>{-3,-2}</string>
                 <key>rotated</key>
@@ -30,10 +30,36 @@
                 <key>sourceSize</key>
                 <string>{176,196}</string>
             </dict>
+            <key>boss_russian_special0.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,192},{188,196}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{188,196}}</string>
+                <key>sourceSize</key>
+                <string>{188,196}</string>
+            </dict>
+            <key>boss_russian_special_white0.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{188,196}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{188,196}}</string>
+                <key>sourceSize</key>
+                <string>{188,196}</string>
+            </dict>
             <key>boss_russian_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{176,196}}</string>
+                <string>{{2,382},{176,196}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +72,7 @@
             <key>boss_russian_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,358},{170,192}}</string>
+                <string>{{2,738},{170,192}}</string>
                 <key>offset</key>
                 <string>{-3,-2}</string>
                 <key>rotated</key>
@@ -59,11 +85,11 @@
             <key>russian_beserker0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{77,702},{73,84}}</string>
+                <string>{{77,1082},{73,84}}</string>
                 <key>offset</key>
                 <string>{0,-2}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,4},{73,84}}</string>
                 <key>sourceSize</key>
@@ -72,11 +98,11 @@
             <key>russian_beserker1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{77,777},{67,88}}</string>
+                <string>{{152,1151},{67,88}}</string>
                 <key>offset</key>
                 <string>{-3,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{67,88}}</string>
                 <key>sourceSize</key>
@@ -85,7 +111,7 @@
             <key>russian_beserker_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,702},{73,84}}</string>
+                <string>{{2,1082},{73,84}}</string>
                 <key>offset</key>
                 <string>{0,-2}</string>
                 <key>rotated</key>
@@ -98,7 +124,7 @@
             <key>russian_beserker_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{163,725},{67,88}}</string>
+                <string>{{152,1082},{67,88}}</string>
                 <key>offset</key>
                 <string>{-3,0}</string>
                 <key>rotated</key>
@@ -137,11 +163,11 @@
             <key>russian_gunman_shoot0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{189,837},{41,64}}</string>
+                <string>{{196,988},{41,64}}</string>
                 <key>offset</key>
                 <string>{-8,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{41,64}}</string>
                 <key>sourceSize</key>
@@ -150,11 +176,11 @@
             <key>russian_gunman_shoot1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{189,794},{41,64}}</string>
+                <string>{{196,922},{41,64}}</string>
                 <key>offset</key>
                 <string>{-8,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{41,64}}</string>
                 <key>sourceSize</key>
@@ -163,7 +189,7 @@
             <key>russian_gunman_shoot_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{146,794},{41,64}}</string>
+                <string>{{200,724},{41,64}}</string>
                 <key>offset</key>
                 <string>{-8,0}</string>
                 <key>rotated</key>
@@ -176,11 +202,11 @@
             <key>russian_gunman_shoot_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,834},{41,64}}</string>
+                <string>{{200,658},{41,64}}</string>
                 <key>offset</key>
                 <string>{-8,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{41,64}}</string>
                 <key>sourceSize</key>
@@ -215,7 +241,7 @@
             <key>russian_melee0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,464},{55,64}}</string>
+                <string>{{196,856},{55,64}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -241,7 +267,7 @@
             <key>russian_melee_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,398},{55,64}}</string>
+                <string>{{196,790},{55,64}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -267,11 +293,11 @@
             <key>russian_villager0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,788},{44,63}}</string>
+                <string>{{200,593},{44,63}}</string>
                 <key>offset</key>
                 <string>{-2,-1}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{1,2},{44,63}}</string>
                 <key>sourceSize</key>
@@ -280,7 +306,7 @@
             <key>russian_villager1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,660},{44,63}}</string>
+                <string>{{200,528},{44,63}}</string>
                 <key>offset</key>
                 <string>{-3,-1}</string>
                 <key>rotated</key>
@@ -293,7 +319,7 @@
             <key>russian_villager_white0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,595},{44,63}}</string>
+                <string>{{200,463},{44,63}}</string>
                 <key>offset</key>
                 <string>{-2,-1}</string>
                 <key>rotated</key>
@@ -306,7 +332,7 @@
             <key>russian_villager_white1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,530},{44,63}}</string>
+                <string>{{200,398},{44,63}}</string>
                 <key>offset</key>
                 <string>{-3,-1}</string>
                 <key>rotated</key>
@@ -324,9 +350,9 @@
             <key>realTextureFileName</key>
             <string>russianframes-hd.pvr.ccz</string>
             <key>size</key>
-            <string>{255,880}</string>
+            <string>{255,1220}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:404e60a1e7d915234cdb20dc2dcc0ae8:1fe3c773d149d5d5c24277d7d231bfb4:14b8a52e635efadc15475fe516230b12$</string>
+            <string>$TexturePacker:SmartUpdate:b6eefd26286a6b351b5cd26cece040ba:1ea4274fc0055869b77fc61afc6e8168:14b8a52e635efadc15475fe516230b12$</string>
             <key>textureFileName</key>
             <string>russianframes-hd.pvr.ccz</string>
         </dict>
